--- a/index.html
+++ b/index.html
@@ -21,27 +21,28 @@
 	Dear Pipo<br/><br/>
 	
 	I am writing to express my great interest in the Visiting Assistant Professor for Integrated Media 
-	that was posted on to your site. As you can see from my CV, I have experience teaching both in traditional 
-	and new media. My own experience in art has taught to combine video, net-art, archival arts, creative coding and 3D printing.
+	that was posted on your site. As you can see from my CV, I have experience teaching both in traditional 
+	and new media. My own experience in art has taught me to combine video, net-art, archival arts, creative coding and 3D printing.
 	<br/><br/>
 
-	During the last semester I have taught four classes on digital imaging and web-art. 
+	During the last semester I have taught four sections of a class on digital imaging and web-art. 
 	It was a mandatory class in the first year program aimed at the introduction of both new types 
-	of media and the idea of internet presence and citizenship. I developed the classes which I taught. 
-	The results can be seen in the students' works. Most students have never thought of their computer as a productive tool, 
-	and the realization of it as one and the new uses they found were fascinating and enlightening.
-	In the year previous, I have assisted students in classes varying classes. 
+	of media and the idea of internet presence and citizenship. I developed all the classes which I taught. 
+	Most students have never thought of their computer as a productive tool, 
+	and this realization and the new uses they found were fascinating and enlightening.
+	In the previous year, I have assisted students in various classes, both frontal art history seminars and project based classes. 
 	I was a teacher's assistant to Prehistory of New Media that explored the history of New Media and code art prior to 
 	the title origin in the 1980's. 
 	I also assisted graduate level seminar on experimental approaches to writing and 
-	taking writing off the page in which I was exposed to teaching techniques and various ways of collaborations.   
+	taking writing off the page in which I was exposed to various methods of collaborations. 
+	I also learned teaching techniques to incorporate difficult texts into a project oriented seminar.   
 	<br/><br/>
-	As an artist I am interested in the relationship between a body and its inanimate environment. 
-	This interest led me to an MFA at SAIC’s Department of Art and Technology studies. 
+	As an artist I am interested in the relationship between the body and its inanimate environment. 
+	This interest led me to an MFA at SAIC’s Department of Art and Technology Studies. 
 	 During the program I was exposed both to 3D printing and creative coding. I have developed my practice to 
 	 deal with new forms of relating to space and objects in my environment. 
-	 I have, as can be seen in my work, developed an interest in conversations that 
-	 are impossible and question the ability to see the world. For example, a series of 
+	 I have, as can be seen in my work, developed an interest in impossible conversations that 
+	 question the ability to comprehend the world. For example, I facilitated a series of 
 	 private conversation with the stars that were broadcasted to outer space with a hacked ham radio. 
 	 <br/><br/>
 
