--- a/syllabus.html
+++ b/syllabus.html
@@ -118,7 +118,7 @@ Week 6 Body endings
 	Discussion: 
 		What is skin?
 		Chameleon Conversation.  
-		Explanation of mid projects - which are building a character, it's relations to the world, it's relations to you, 
+		Explanation of mid projects - which are building a character, its relations to the world, its relations to you, 
 		(it could be you or not). creating a work with/ about/ from the viewpoint of the character
 	
 	Watch: 
