removed large file

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,19 @@
 <a href="syllabus.html"> Example Syllabi </a> <br/><br/>
 </nav>
 </div>
-<div id="centerContet" style="width:6300px">
+<div id="centerContet" style="width:6600px">
 	<div id="container" style="width:600px">
-	<p style="text-align:center; width:600px">
-		<video width="600px" controls="controls">
-			<source src="portfolio/pornographic_nature.mp4" type="video/mp4">
-		</video>			
-	</p>
+	
+		<video controls="controls" style="width:600px;
+										 margin-left:auto;
+										margin-right:auto;
+										display:block;
+										position: relative;
+										top: 10px;">
+				
+			<source src="portfolio/pornographic_nature.mp4" type="video/mp4" >
+		</video>
+
 	<p class="explain">
 		<b><u> Pornographic Nature </b></u><br/>
 		2014<br/>
@@ -35,10 +41,25 @@
 		The full video can be seen <a href="http://guyeytan.com/see#/id/v131444"><u>here.</u></a><br/>
 	</p>
 	</div>
-	<div id="container" style="width:700px; left:600px">
-		<p style="text-align:center; width:700px">
-		<img src="portfolio/A Map Called Home.jpg" height="600px">
+	<div id="container" style="width:1200px; left:600px">
+		
+		<img src="portfolio/monument.jpg" style="max-width:1190px" class="portfolio">
+	
+		<p class="explain">
+		<u><b>How To Become One with a Monument</b></u><br/>
+		2014 <br/>
+		Performance <br/>
+		The city of Chicago is renowned for its monumental architecture.<br/>
+		I, as a foreigner in the city, feel both in awe and excluded by the monuments<br/>
+		In a series of performances I try to attach myself to the monuments using osmosis.<br/>
+		The band is there in order to keep the head locked in place, always touching the monument.<br/>
+		Each performance ended when I was asked what I was doing or asked to leave <br/>
 		</p>
+	</div> 
+	<div id="container" style="width:700px; left:1800px">
+		
+		<img class="portfolio" style="max-width:690px" src="portfolio/A Map Called Home.jpg">
+		
 		<p class="explain" style="width:700px;">
 		<u><b>A Map Called Home</b></u><br/>
 		2014 <br/>
@@ -52,10 +73,10 @@
 		An example of a days text can be read <u><a href="http://guyeytan.com/performative-subjects#/id/i5915999"> here </a></u>
 		</p>
 	</div> 
-	<div id="container" style="width:900px; left:1304px">
-		<p style="text-align:center">
-		<img src="portfolio/coupletherapy.jpg" height="600px">
-		</p>
+	<div id="container" style="width:900px; left:2504px">
+		
+		<img src="portfolio/coupletherapy.jpg" style="max-width:890px" class="portfolio">
+	
 		<p class="explain">
 		<u><b>Couple Therapy</b></u><br/>
 		2014 <br/>
@@ -65,59 +86,30 @@
 		Thus the viewer was recreating the situation that "killed" me.
 		</p>
 	</div> 
-	<div id="container" style="width:700px; left:2200px">
-		<p style="text-align:center">
-		<img src="portfolio/incarnation_wine_light.jpg" height="600px">
-		</p>
+	<div id="container" style="width:900px; left:3404px">
+	
+		<img src="portfolio/let me ask the questions.jpg" class="portfolio" style="max-width:890px;">
+	
 		<p class="explain">
-		<u><b>Wine/Light/Incarnate</b></u><br/>
-		2010 <br/>
-		Fifteen wine glasses are set in a row on the floor.<br/> 
-		They are arranged in a gradient from pure red wine to pure white wine. An energy saving light bulb sits in each glass. <br/>
-		The electricity cables hang down from the ceiling. <br/>
-		The room slowly fills up with the smell of the wine evaporating.<br/>
-		The usually harsh light of the light bulbs is filtered and warmed by the shade of the wine.	
+		<u><b>Let Me Ask the Questions</u></b><br/>
+		2013<br/>
+		Digital printout, tomatoes, index cards, envelopes, paper bags<br/>
+		In front a large low quality print of a theatre curtain with a single microphone, 
+		I take out an envelope from a back pocket. Reading each sentence from a new index card, 
+		I recite a text about professional personality tests and instructions to the performance. 
+		Each member of the audience gets a small bag with 19 grape tomatoes. After they get the bags, 
+		I explain that I will read the questions from the test that are not calculated in the score of the original. 
+		Every time a viewer says yes to a questions they throw a tomato at me. At the end of the questions, 
+		I pass through the audience and ask each one how many tomatoes they have left in the bag. 
+		According to that number they get an envelope with a "reading" of their personality. 
+		These readings are quotes from sources differing from greek and modern philosophy to pop music. 
+		Taken out of context the quotes seemly oddly fitting to each receiver. 
 		</p>
-	</div> 
-	<div id="container" style="width:1200px; left:2900px">
-		<p style="text-align:center">
-		<img src="portfolio/monument.jpg" height="600px">
-		</p>
-		<p class="explain">
-		<u><b>How To Become One with a Monument</b></u><br/>
-		2014 <br/>
-		Performance <br/>
-		The city of Chicago is renowned for its monumental architecture.<br/>
-		I, as a foreigner in the city, feel both in awe and excluded by the monuments<br/>
-		In a series of performances I try to attach myself to the monuments using osmosis.<br/>
-		The band is there in order to keep the head locked in place, always touching the monument.<br/>
-		Each performance ended when I was asked what I was doing or asked to leave <br/>
-		</p>
-	</div> 
-		<div id="container" style="width:700px; left: 4100px">
-		<p style="text-align:center; width:700px">
-		<img src="portfolio/Spacial Problems.jpeg" height="600px">
-		</p>
-		<p class="explain" style="width:600px">
-		<u><b>Spacial Problems</b></u><br/>
-		2014 <br/>
-		Radio transmission, digital prints <br/>
-		In 2003 a radio transmission was sent to 6 planets that are presumed that they might hold life. 
-		Into this message I have inserted a Rosetta Stone about language. 
-		The writing is in a font that I made specifically for this project. 
-		The original message ends with a series of questions about the the receivers, 
-		I have replaced those questions with personal messages by people surveyed for this project. 
-		The project revolves around unseen transmission, I try to render the invisible into the visual. 
-		This is the first attempt made in studio. 
-		The print outs of the first 15 people that answered the survey were weaved ceiling. 
-		The final step in the first stage of the project will be building a transmitter to send the answered to space.
-		</p>
-	</div> 
+	</div>
+	<div id="container" style="width:900px; left:4304px">
 		
-		<div id="container" style="width:900px; left:4804px">
-		<p style="text-align:center; width:900px">
-		<img src="portfolio/treated space.jpg" height="600px">
-		</p>
+		<img src="portfolio/treated space.jpg" style="max-width:890px" class="portfolio">
+	
 		<p class="explain" style="width:600px">
 		<u><b>Treated Space</b></u><br/>
 		2014 <br/>
@@ -128,6 +120,44 @@
 		 The floor next to the walls is covered with vinyl and foam tiles made especially to catch the falling cups.
 		</p>
 	</div> 
+	
+	<div id="container" style="width:700px; left:5200px">
+		
+		<img src="portfolio/Spacial Problems.jpeg" style="max-width:690px" class="portfolio">
+		
+		<p class="explain" style="width:600px">
+		<u><b>Spacial Problems</b></u><br/>
+		2012 <br/>
+		Radio transmission, digital prints <br/>
+		In 2003 a radio transmission was sent to 6 planets that are presumed that they might hold life. 
+		Into this message I have inserted a Rosetta Stone about language. 
+		The writing is in a font that I made specifically for this project. 
+		The original message ends with a series of questions about the the receivers, 
+		I have replaced those questions with personal messages by people surveyed for this project. 
+		The project revolves around unseen transmission, I try to render the invisible into the visual. 
+		This is the first attempt made in studio. 
+		The final step in the first stage of the project will be building a transmitter to send the answered to space.
+		</p>
+	</div> 
+	
+	<div id="container" style="width:700px; left:5900px">
+		
+		<img src="portfolio/incarnation_wine_light.jpg" style="max-width:690px" class="portfolio">
+		
+		<p class="explain">
+		<u><b>Wine/Light/Incarnate</b></u><br/>
+		2011 <br/>
+		Fifteen wine glasses are set in a row on the floor.<br/> 
+		They are arranged in a gradient from pure red wine to pure white wine. An energy saving light bulb sits in each glass. <br/>
+		The electricity cables hang down from the ceiling. <br/>
+		The room slowly fills up with the smell of the wine evaporating.<br/>
+		The usually harsh light of the light bulbs is filtered and warmed by the shade of the wine.	
+		</p>
+	</div> 
+	
+
+		
+		
 </div>
 </body>
 </html>
