--- a/resume.html
+++ b/resume.html
@@ -25,10 +25,13 @@
 	2010 - BFA, Bezalel Academy of Art and Design, Jerusalem, Israel
 
 <b>Professional Experience </b>
-	2014 - Teaching at SAIC, WIRED, a class dedicated to digital imaging and net-art
-	2014 - Teaching Assistant at SAIC  (Fundamentals of Art and Technology - Instructor: Su Hyun Nam; 
+	2014 - Taught at SAIC, WIRED, a class dedicated to digital imaging and net-art.
+		Developing classes, individual work with students, etc.
+	2014 - TA at SAIC  (Fundamentals of Art and Technology - Instructor: Su Hyun Nam; 
 						Misheard, Respoken - Writing Workshop - Ellen Rothenberg)
-	2013 - Teaching Assistant at the Art History Department (Prehistory of New Media - Teacher: Paul Hertz)
+		Helping students develop projects, lead group discussions, practical help with projects.
+	2013 - TA at the Art History Department (Prehistory of New Media - Teacher: Paul Hertz)
+		Grading papers, writing assistance, lead group discussions.
 	2012-2013 - TA at SAIC (Computer Skills, Photoshop, Mobile App building - WIRED 6 sections; Core Practices - sculpture basics) 
 	2009 - 2012 - Print teacher, specialization in lithograph, engraving and etching, Bezalel, Academy of Art and Design, Jerusalem
 	2009-2012 - Assistant director of print workshops, Bezalel, Academy of Art and Design, Jerusalem
