--- a/syllabus.html
+++ b/syllabus.html
@@ -28,7 +28,17 @@ He did not care." Samuel R. Delany <br/> <br/>
 
 Description: <br/>
 
-Oscar Wilde noted that "Man is least himself when he talks in his own person. Give him a mask, and he will tell you the truth". Shakespeare is oft quoted to say "All the world’s a stage/ And all the men and women are merely players". Online, under the cover of anonymity and self editing, this performance becomes both more apparent and more subtle in its effects. The class will research how the making of the online persona and performing to camera can affect the world. We will explore the ideas of accepting the produced online image not only as an outcome, but also as a starting point for a view on reality. We will cover a range of approaches from pop persona (e.g. Janelle Monáe and Drexciya), through artist (e.g. Rebecca Horn and Ryan Trecartin) to author (e.g. Samuel R. Delany and J.G. Ballard). In this class students will research the relations between technology and identity through web art, 3D printing, sewing, wearable circuitry, video, photography and other modes of production.
+Oscar Wilde noted that "Man is least himself when he talks in his own person. 
+Give him a mask, and he will tell you the truth". Shakespeare is oft quoted to say "All the world's a stage/ 
+And all the men and women are merely players". 
+Online, under the cover of anonymity and self editing, 
+this performance becomes both more apparent and more subtle in its effects. 
+The class will research how the making of the online persona and performing to camera can affect the world.
+ We will explore the ideas of accepting the produced online image not only as an outcome, 
+ but also as a starting point for a view on reality. We will cover a range of approaches from pop persona 
+ (e.g. Janelle Monáe and Drexciya), through artist (e.g. Rebecca Horn and Ryan Trecartin) to author 
+ (e.g. Samuel R. Delany and J.G. Ballard). In this class students will research the relations between 
+ technology and identity through web art, 3D printing, sewing, wearable circuitry, video, photography and other modes of production.
 <br/>
 <p/>
 <pre style="left:240px; position:relative">
