--- a/index.html
+++ b/index.html
@@ -20,38 +20,47 @@
 	<p style="width:600px; left:240px; position: relative; font-family:calibri; font-size:12px">
 	Dear Pipo<br/><br/>
 	
-	I am writing to express my great interest in the Visiting Assistant Professor for Integrated Media 
-	that was posted on your site. As you can see from my CV, I have experience teaching both in traditional 
-	and new media. My own experience in art has taught me to combine video, net-art, archival arts, creative coding and 3D printing.
+	I am writing to express my great interest in the Visiting Assistant 
+	Professor for Integrated Media position posted on your site. As my attached CV demonstrates, 
+	I have experience teaching at the college level in both traditional and new media. 
+	My own artistic practice incorporates video, net-art, archival arts, creative coding and 3D printing.  
 	<br/><br/>
 
-	During the last semester I have taught four sections of a class on digital imaging and web-art. 
-	It was a mandatory class in the first year program aimed at the introduction of both new types 
-	of media and the idea of internet presence and citizenship. I developed all the classes which I taught. 
-	Most students have never thought of their computer as a productive tool, 
-	and this realization and the new uses they found were fascinating and enlightening.
-	In the previous year, I have assisted students in various classes, both frontal art history seminars and project based classes. 
-	I was a teacher's assistant to Prehistory of New Media that explored the history of New Media and code art prior to 
-	the title origin in the 1980's. 
-	I also assisted graduate level seminar on experimental approaches to writing and 
-	taking writing off the page in which I was exposed to various methods of collaborations. 
-	I also learned teaching techniques to incorporate difficult texts into a project oriented seminar.   
+	During the last semester I developed and taught four sections of a course on digital imaging 
+	and web-art at the School of the Art Institute of Chicago. This was a mandatory class in the 
+	first year of the Bachelor degree program aimed at the introduction of new types of media as 
+	well as the cultural and personal significance of the Internet. Students were familiarized with
+	 the idea of internet citizenship and were shown how they can be active creators of content and 
+	 identity rather than passive consumers. During the previous year I assisted students in a number 
+	 of classes that included art history seminars and project-based courses. One of these was a course
+	  titled Prehistory of New Media that explored New Media and code art prior to the title's origin 
+	  in the 1980's. I also assisted a graduate level seminar on experimental approaches to writing 
+	  in a collaborational setting.   
 	<br/><br/>
-	As an artist I am interested in the relationship between the body and its inanimate environment. 
-	This interest led me to an MFA at SAIC’s Department of Art and Technology Studies. 
-	 During the program I was exposed both to 3D printing and creative coding. I have developed my practice to 
-	 deal with new forms of relating to space and objects in my environment. 
-	 I have, as can be seen in my work, developed an interest in impossible conversations that 
-	 question the ability to comprehend the world. For example, I facilitated a series of 
-	 private conversation with the stars that were broadcasted to outer space with a hacked ham radio. 
+	My practice is all over the map, both literally and figuratively. I am interested in the body 
+	but also outer space, and I am as likely to strike up a conversation about rewardless orchids 
+	as I am to start a debate about the meaning of life with a sweet potato. As a recent transplant 
+	to Chicago, my practice has shifted to include an intense interest in loneliness and long distance 
+	relationships. The role of technology, and especially the internet, is naturally an integral 
+	part of this preoccupation. 
+	 <br/><br/>
+	 As an artist I am interested in the relationship between the body and its inanimate environment. 
+	 This interest led me to an MFA at SAIC’s Department of Art and Technology Studies. During the 
+	 program I was exposed to 3D printing as well as creative coding. I have, as can be seen in my 
+	 work, developed an interest in impossible conversations that question the ability to comprehend the 
+	 world. For example, I facilitated a series of private conversation with the stars that were 
+	 broadcasted to outer space with a hacked ham radio. 
 	 <br/><br/>
 
 	I am applying to the job since my interest 
 	in new ways to look at the world and finding out that teaching is 
 	an amazing way to both expose new ways and meet new outlooks.
 	<br/><br/>
-
-	Thank you for your consideration.<br/>
+	
+	I consider teaching an intrinsic part of my artistic practice since my interest in new ways to look 
+	at the world and finding out that teaching is an amazing way to both expose new ways and meet new outlooks.
+	<br/><br/> 
+	Thank you in advance for your consideration.<br/>
 	Best regards,<br/>
 	Guy Eytan
 	</p>
