--- a/reference_letters.html
+++ b/reference_letters.html
@@ -16,15 +16,15 @@
 <a href="syllabus.html"> Example Syllabi </a> <br/><br/>
 </nav>
 </div>
-<div id="centerContent">
-	<h5 style="left:240px; position:relative"> Jan Tichy </h5>
-	<p style="left:240px; position:relative">email: jtichy@saic.edu <br/></p>
-	<h5 style="left:240px; position:relative"> Lee Blalock </h5>
-	<p style="left:240px; position:relative"> email: leeblalock03@gmail.com <br/></p>
-	<h5 style="left:240px; position:relative"> Ellen Rothenberg </h5>
-	<p style="left:240px; position:relative"> email: erothe@saic.edu <br/></p>
-	<h5 style="left:240px; position:relative"> Matthew Goulish </h5>
-	<p style="left:240px; position:relative"> email: mgouli@artic.edu <br/></p>
+<div id="centerContent" style="left:240px">
+<h5> Jan Tichy </h5>
+<p>email: jtichy@saic.edu <br/></p>
+<h5> Lee Blalock </h5>
+<p> email: leeblalock03@gmail.com <br/></p>
+<h5> Ellen Rothenberg </h5>
+<p> email: erothe@saic.edu <br/></p>
+<h5> Matthew Goulish </h5>
+<p> email: mgouli@artic.edu <br/></p>
 
 </div>
 </body>
