changed font of index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </nav>
 </div>
 <div id="centerContent">
-	<p style="width:600px; left:240px; position: relative; font-family:calibri; font-size:12px">
+	<p style="width:600px; left:240px; position: relative; font-family:georgia; font-size:12px">
 	Dear Pipo<br/><br/>
 	
 	I am writing to express my great interest in the Visiting Assistant 
