--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 			<source src="portfolio/pornographic_nature.mp4" type="video/mp4" >
 		</video>
 
-	<p class="explain">
+	<p class="explain" style="width:570px;">
 		<b><u> Pornographic Nature </b></u><br/>
 		2014<br/>
 		Video, 10:40 <br/>
