--- a/reference_letters.html
+++ b/reference_letters.html
@@ -11,20 +11,22 @@
 <a href="index.html">Application Letter</a> <br/><br/>
 <a href="student_work.html">Student Work </a> <br/> <br/>
 <a href="portfolio.html">Portfolio </a> <br/><br/>
-<a href="resume.html"> Resume </a> <br/><br/>
+<a href="resume.html"> Resume & <br/> Transcripts </a> <br/><br/>
 <a href="reference_letters.html"> Reference </a> <br/><br/>
 <a href="syllabus.html"> Example Syllabi </a> <br/><br/>
 </nav>
 </div>
 <div id="centerContent" style="left:240px">
-<h5 style="left:240px; position:relative"> Jan Tichy </h5>
-<p style="left:240px; position:relative">email: jtichy@saic.edu <br/></p>
 <h5 style="left:240px; position:relative"> Lee Blalock </h5>
-<p style="left:240px; position:relative"> email: leeblalock03@gmail.com <br/></p>
+<p style="left:240px; position:relative"> email: leeblalock03@gmail.com<br/>
+											<a href="documents/GuyEytan.pdf"><u>Recommendation letter</u></a> </br></p>
 <h5 style="left:240px; position:relative"> Ellen Rothenberg </h5>
-<p style="left:240px; position:relative"> email: erothe@saic.edu <br/></p>
+<p style="left:240px; position:relative"> email: erothe@saic.edu <br/>
+											Recommendation letter already sent<br/></p>
 <h5 style="left:240px; position:relative"> Matthew Goulish </h5>
 <p style="left:240px; position:relative"> email: mgouli@artic.edu <br/></p>
+<h5 style="left:240px; position:relative"> Jan Tichy </h5>
+<p style="left:240px; position:relative">email: jtichy@saic.edu <br/></p>
 
 </div>
 </body>
