--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 	<a href="index.html">Application Letter</a> <br/><br/>
 	<a href="student_work.html">Student Work </a> <br/> <br/>
 	<a href="portfolio.html">Portfolio </a> <br/><br/>
-	<a href="resume.html"> Resume </a> <br/><br/>
+	<a href="resume.html"> Resume & <br/> Transcripts </a> <br/><br/>
 	<a href="reference_letters.html"> Reference </a> <br/><br/>
 	<a href="syllabus.html"> Example Syllabi </a> <br/>
 	</nav>
@@ -65,6 +65,10 @@
 	2011 - Steampunk as a subversive culture -  Archive Magazine. 
 
 </pre>
+
+<p style="left:220px; position:relative">
+<a href="documents/transcripts.pdf"><u>Transcripts (pdf)</u></a>
+
 </div>
 
 </body>
