fixed minor mistakes

--- a/resume.html
+++ b/resume.html
@@ -41,6 +41,7 @@
 	2005 -2010 - Freelance translation in various subjects, University of Tel Aviv, Israel 
 
 <b>Exhibitions  </b>
+	2014 - Media Futures - Chicago, IL.
 	2014 - Plans for the Future - Jerusalem, Israel
 	2014 - The Unfetishable Body of Speech - Toronto Canada 
 	2014 - The Unspeakable Body of Fetish - Toronto, Canada
