--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	relationships. The role of technology, and especially the internet, is naturally an integral 
 	part of this preoccupation. 
 	 <br/><br/>
-	 As an artist I am interested in the relationship between the body and its inanimate environment. 
+	 As an artist I wish to research the relationship between the body and its inanimate environment. 
 	 This interest led me to an MFA at SAIC’s Department of Art and Technology Studies. During the 
 	 program I was exposed to 3D printing as well as creative coding. I have, as can be seen in my 
 	 work, developed an interest in impossible conversations that question the ability to comprehend the 
@@ -58,7 +58,7 @@
 	<br/><br/>
 	
 	I consider teaching an intrinsic part of my artistic practice since my interest in new ways to look 
-	at the world and finding out that teaching is an amazing way to both expose new ways and meet new outlooks.
+	at the world and I found out that teaching is an amazing way to both expose new ways and meet new outlooks.
 	<br/><br/> 
 	Thank you in advance for your consideration.<br/>
 	Best regards,<br/>
