changed matthew status

--- a/reference_letters.html
+++ b/reference_letters.html
@@ -24,7 +24,8 @@
 <p style="left:240px; position:relative"> email: erothe@saic.edu <br/>
 											Recommendation letter already sent<br/></p>
 <h5 style="left:240px; position:relative"> Matthew Goulish </h5>
-<p style="left:240px; position:relative"> email: mgouli@artic.edu <br/></p>
+<p style="left:240px; position:relative"> email: mgouli@artic.edu <br/>
+											Recommendation letter sent by him separately</p>
 <h5 style="left:240px; position:relative"> Jan Tichy </h5>
 <p style="left:240px; position:relative">email: jtichy@saic.edu <br/></p>
 
